Fix: removing comment will crash the program

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -447,3 +447,5 @@
 "COMMENT_VIEW_COPY_TEXT_LABEL" = "Copy Text";
 
 "DETAILVIEW_NO_SUCH_POST_PLACEHOLDER" = "No such post";
+
+"DETAIL_MENU_REFRESH_LABEL" = "Refresh";
