--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -453,3 +453,5 @@
 "COMMENT_VIEW_COPY_TEXT_LABEL" = "拷贝文本";
 
 "DETAILVIEW_NO_SUCH_POST_PLACEHOLDER" = "树洞不存在";
+
+"DETAIL_MENU_REFRESH_LABEL" = "刷新";
